updated some docs
